--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "android-temp"
+rootProject.name = "divine-DYWeChat"
 include ':dy_wechat'
