--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
+//apply plugin 'maven-publish'
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
+    id 'maven-publish' apply true
 }
 
 task clean(type: Delete) {
