--- a/dy_wechat/build.gradle
+++ b/dy_wechat/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
@@ -24,4 +25,8 @@ android {
 
 dependencies {
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+}
+task generateSourcesJar(type: Jar){
+    from android.sourceSets.main.java.srcDirs
+    classifier  'sources'
 }
