--- a/dy_wechat/build.gradle
+++ b/dy_wechat/build.gradle
@@ -30,3 +30,15 @@ task generateSourcesJar(type: Jar){
     from android.sourceSets.main.java.srcDirs
     classifier  'sources'
 }
+//jitpack.io ERROR: No build artifacts found 问题解决
+//由于在Android studio开发库时会带com.android.libraryplugin，生成了artifacts
+//所以我们需要手动添加artifacts。
+publishing{
+    publications{
+        dyMaven(MavenPublication){
+            groupId='com.divine.wechat'
+            artifactId='divine.yang'
+            version='1.0.0'
+        }
+    }
+}
