--- a/dy_wechat/build.gradle
+++ b/dy_wechat/build.gradle
@@ -26,19 +26,19 @@ android {
 dependencies {
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 }
-task generateSourcesJar(type: Jar){
-    from android.sourceSets.main.java.srcDirs
-    classifier  'sources'
-}
+//task generateSourcesJar(type: Jar){
+//    from android.sourceSets.main.java.srcDirs
+//    classifier  'sources'
+//}
 //jitpack.io ERROR: No build artifacts found 问题解决
 //由于在Android studio开发库时会带com.android.libraryplugin，生成了artifacts
 //所以我们需要手动添加artifacts。
 publishing{
     publications{
         dyMaven(MavenPublication){
-            groupId='com.divine'
+            groupId='com.divine.wechat'
             artifactId='wechat'
-            version='1.0.0'
+            version='1.0.1'
         }
     }
 }
