--- a/dy_wechat/build.gradle
+++ b/dy_wechat/build.gradle
@@ -10,21 +10,14 @@ android {
         minSdk 21
         targetSdk 32
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
-
 dependencies {
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android:+'
+//    api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 }
 //task generateSourcesJar(type: Jar){
 //    from android.sourceSets.main.java.srcDirs
